--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${SQUIRREL_INCLUDE})
 link_directories(${SQUIRREL_LIB_DIR})
 
 set(${PROJECT_NAME}_headers "sq_vm.h" "sq_console_base.h" "sq_text_console.h")
-set(${PROJECT_NAME}_sources "sq_vm.cpp" "sq_text_console.cpp" "test.cpp")
+set(${PROJECT_NAME}_sources "sq_vm.cpp" "sq_console_base.cpp" "sq_text_console.cpp" "test.cpp")
 
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_headers} ${${PROJECT_NAME}_sources})
 
